D-45117 fixing issue with alignment of languages in mobile menu

--- a/public/styles/projects/international/china-brazil/style.scss
+++ b/public/styles/projects/international/china-brazil/style.scss
@@ -161,7 +161,7 @@ html {
                     list-style-type: none;
                     float: left;
                     margin: 0 27px;
-                    margin: 0 8.1vmin;
+                    margin: 0 3vmin;
                     &:active a, &:hover a, &.active a {
                     color: #000;
                     }
